--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -28,18 +28,18 @@
     </android.support.v4.widget.SwipeRefreshLayout>
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="192dp">
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 android:layout_width="match_parent"
-                android:layout_height="112dp"
+                android:layout_height="72dp"
                 android:minHeight="?attr/actionBarSize"
-                android:gravity="center"
+                android:layout_gravity="center"
                 app:layout_collapseMode="pin">
 
                 <ImageView android:src="@drawable/logo"
