--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -92,7 +92,7 @@
                 android:fitsSystemWindows="true"
                 android:id="@+id/toolbar1"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="72dp"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:layout_collapseMode="pin" />
@@ -110,7 +110,7 @@
         android:src="@drawable/ic_share"
         app:elevation="6dp"
         app:borderWidth="0dp"
-        android:layout_marginRight="8dp"
-        app:pressedTranslationZ="12dp"/>
+        android:layout_marginEnd="8dp"
+        app:pressedTranslationZ="6dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
